<?xml version="1.0"?>
<package>
  <name>ar_helipad</name>
  <version>0.0.0</version>
  <description>The ar_helipad package</description>

  <maintainer email="gstavrinos@iit.demokritos.gr">George Stavrinos</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
