<?xml version="1.0"?>
<package>
  <name>ar_helipad</name>
  <version>0.0.0</version>
  <description>The ar_helipad package</description>

  <maintainer email="gstavrinos@iit.demokritos.gr">George Stavrinos</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>ar_track_alvar_msgs</build_depend>
  <build_depend>ar_track_alvar</build_depend>
  <run_depend>tf2_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>ar_track_alvar_msgs</run_depend>
  <run_depend>ar_track_alvar</run_depend>

  <export>
  </export>
</package>
